src/petal/snapshots/petal__petal__parser__tests__literals-3.snap
---
source: src/petal/parser.rs
expression: "parse_expr(\"\\\"hello\\\"\")"
---
[
    ExprNode {
        expr: String(
            "hello",
        ),
        span: Span(
            Pos(
                1,
            ),
            Pos(
                7,
            ),
        ),
    },
]
