src/petal/snapshots/petal__petal__parser__tests__literals.snap
---
source: src/petal/parser.rs
expression: "parse_expr(\"1\")"
---
Integer {
    value: 1,
    span: Span {
        start: Pos {
            line: 0,
            col: 1,
        },
        end: Pos {
            line: 0,
            col: 1,
        },
    },
}
