src/petal/snapshots/petal__petal__parser__tests__structs-2.snap
---
source: src/petal/parser.rs
expression: "parse_stmt(\"struct Foo { hello: Int }\")"
---
Struct(
    StructDecl {
        name: "Foo",
        fields: [
            StructField {
                name: "hello",
                ty: TypeAnnotation {
                    name: "Int",
                    span: Span {
                        start: Pos {
                            line: 0,
                            col: 21,
                        },
                        end: Pos {
                            line: 0,
                            col: 23,
                        },
                    },
                },
                span: Span {
                    start: Pos {
                        line: 0,
                        col: 14,
                    },
                    end: Pos {
                        line: 0,
                        col: 23,
                    },
                },
            },
        ],
        span: Span {
            start: Pos {
                line: 0,
                col: 1,
            },
            end: Pos {
                line: 0,
                col: 25,
            },
        },
    },
)
