src/petal/snapshots/petal__petal__parser__tests__structs-3.snap
---
source: src/petal/parser.rs
expression: "parse_stmt(\"struct Foo {\n            hello: Int,\n            world: String\n        }\")"
---
Struct(
    StructDecl {
        name: "Foo",
        fields: [
            StructField {
                name: "hello",
                ty: TypeAnnotation {
                    name: "Int",
                    span: Span {
                        start: Pos {
                            line: 1,
                            col: 20,
                        },
                        end: Pos {
                            line: 1,
                            col: 22,
                        },
                    },
                },
                span: Span {
                    start: Pos {
                        line: 1,
                        col: 13,
                    },
                    end: Pos {
                        line: 1,
                        col: 22,
                    },
                },
            },
            StructField {
                name: "world",
                ty: TypeAnnotation {
                    name: "String",
                    span: Span {
                        start: Pos {
                            line: 2,
                            col: 20,
                        },
                        end: Pos {
                            line: 2,
                            col: 25,
                        },
                    },
                },
                span: Span {
                    start: Pos {
                        line: 2,
                        col: 13,
                    },
                    end: Pos {
                        line: 2,
                        col: 25,
                    },
                },
            },
        ],
        span: Span {
            start: Pos {
                line: 0,
                col: 1,
            },
            end: Pos {
                line: 3,
                col: 9,
            },
        },
    },
)
