src/petal/snapshots/petal__petal__parser__tests__unary_binary_prec-2.snap
---
source: src/petal/parser.rs
expression: "parse(\"!a ^ b\")"
---
BinaryOp {
    left: PrefixOp {
        op: Token {
            token_type: Bang,
            lexeme: "!",
            literal: None,
            span: Span {
                start: Pos {
                    line: 0,
                    col: 1,
                },
                end: Pos {
                    line: 0,
                    col: 1,
                },
            },
        },
        right: Ident {
            name: "a",
            span: Span {
                start: Pos {
                    line: 0,
                    col: 2,
                },
                end: Pos {
                    line: 0,
                    col: 2,
                },
            },
        },
        span: Span {
            start: Pos {
                line: 0,
                col: 1,
            },
            end: Pos {
                line: 0,
                col: 2,
            },
        },
    },
    op: Token {
        token_type: Caret,
        lexeme: "^",
        literal: None,
        span: Span {
            start: Pos {
                line: 0,
                col: 4,
            },
            end: Pos {
                line: 0,
                col: 4,
            },
        },
    },
    right: Ident {
        name: "b",
        span: Span {
            start: Pos {
                line: 0,
                col: 6,
            },
            end: Pos {
                line: 0,
                col: 6,
            },
        },
    },
    span: Span {
        start: Pos {
            line: 0,
            col: 1,
        },
        end: Pos {
            line: 0,
            col: 6,
        },
    },
}
